# fastapi-monolith

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
src/application/: application.py  config.py  containers.py  database.py  endpoints.py  exceptions.py  mypy.py  repositories.py  schemas.py
src/application/database/: __init__.py  database.py  uow.py
src/application/models/: __init__.py  events.py  users.py
src/application/repositories/: __init__.py  event_repository.py
src/application/routers/: __init__.py  event_router.py  user_router.py
src/application/schemas/: event.py  user.py
src/application/services/: __init__.py  event_service.py  user_service.py
src/planner/: application.py  asgi.py  config.py  containers.py  exceptions.py  main.py
src/planner/auth/: __init__.py  authenticate.py  hash_password.py  jwt_handler.py
src/planner/database/: __init__.py  connection.py  database.py  init_db.py  sqlalchemy_database.py  types.py
src/planner/models/: __init__.py  events.py  users.py
src/planner/repositories/: __init__.py  event_repository.py  user_repository.py
src/planner/routers/: __init__.py  auth_router.py  event_router.py  user_router.py
src/planner/routes/: events.py  users.py
src/planner/schemas/: events.py  user.py  users.py
src/planner/services/: __init__.py  event_service.py  user_service.py
tests/: conftest.py
tests/application/: test_application.py  test_containers.py  test_endpoints.py  test_event_router.py  test_user_router.py
tests/e2e/: test_login.py
tests/integration/: conftest.py  test_user_repository.py
tests/planner/: test_application.py  test_auth.py  test_containers.py  test_event_router.py  test_login.py  test_routes.py  test_user_router.py
tests/unit/planner/auth/: test_jwt_handler.py  test_password_encoder.py
